unpackaged/main/default/objects/Yodlee_Banks__c/Yodlee_Banks__c.object-meta.xml
<CustomObject>
    <label>Yodlee Banks</label>
    <nameField>
        <label>Yodlee FI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yodlee Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>