unpackaged/main/default/objects/Yodlee_Banks__c/fields/Account_Holder_Name_Returned__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name_Returned__c</fullName>
    <description>This field will capture if the Bank returns an Account Holder name is returned in Yodlee Data.</description>
    <inlineHelpText>This field will capture if the Bank returns an Account Holder name is returned in Yodlee Data.</inlineHelpText>
    <label>Account Holder Name Returned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>