unpackaged/main/default/objects/Yodlee_Banks__c/fields/Full_Account_Number_Returned__c.field-meta.xml
<CustomField>
    <fullName>Full_Account_Number_Returned__c</fullName>
    <description>This field will capture if the Bank returns a full account number in Yodlee Data.</description>
    <inlineHelpText>This field will capture if the Bank returns a full account number in Yodlee Data.</inlineHelpText>
    <label>Full Account Number Returned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>