unpackaged/main/default/objects/Yodlee_Banks__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>This field will capture the Bank's Locale.</description>
    <inlineHelpText>This field will capture the Bank's Locale.</inlineHelpText>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>