unpackaged/main/default/objects/Yodlee_Banks__c/fields/MFA_Type__c.field-meta.xml
<CustomField>
    <fullName>MFA_Type__c</fullName>
    <description>This field will capture the type of MFA a FI uses.</description>
    <inlineHelpText>This field will capture the type of MFA a FI uses.</inlineHelpText>
    <label>MFA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Image/Captcha</fullName>
            </value>
            <value>
                <fullName>Multilevel</fullName>
            </value>
            <value>
                <fullName>Non MFA</fullName>
            </value>
            <value>
                <fullName>Security Questions</fullName>
            </value>
            <value>
                <fullName>Token Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>