unpackaged/main/default/objects/Yodlee_Banks__c/fields/Routing_Number_Returned__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number_Returned__c</fullName>
    <description>This field will capture if the Bank returns a routing number in Yodlee Data.</description>
    <inlineHelpText>This field will capture if the Bank returns a routing number in Yodlee Data.</inlineHelpText>
    <label>Routing Number Returned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>